# Zenith

./: .gitignore  CMakeLists.txt  README.md  config.yaml
assets/css/: styles.css
assets/js/: scripts.js
content/: aboutme.md
content/blogs/: 2.md  sampleBlog.md
content/projects/: sampleProject.md
src/: file_utils.cpp  main.cpp  markdown_parser.cpp  page_generator.cpp  rss_generator.cpp  utils.cpp
src/includes/: file_utils.h  markdown_parser.h  page_generator.h  rss_generator.h  utils.h
src/templates/: about.html  aboutme.html  base.html  blogs.html  blogs_index.html  projects.html  tags.html
